--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">NFCAPP</string>
+    <string name="nfcapp">NFCApp</string>
+    <string name="uid">UID:</string>
+    <string name="admin_login">admin login</string>
+    <string name="please_bring_your_phone_near_the_nfc_tag">Please bring your Phone near the NFC tag.</string>
 </resources>
