Add Admin Login page. Add Admin Options page.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
     <string name="password">Password</string>
     <string name="user_hint">Username</string>
     <string name="pass_hint">Password</string>
+    <string name="map">Map/Initialize</string>
+    <string name="add">Add Object</string>
+    <string name="options">Admin Options</string>
 </resources>
